; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_rmap_item.c_xfs_trans_log_finish_rmap_update.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_rmap_item.c_xfs_trans_log_finish_rmap_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_trans = type { i32 }
%struct.xfs_rud_log_item = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.xfs_btree_cur = type { i32 }

@XFS_TRANS_DIRTY = common dso_local global i32 0, align 4
@XFS_LI_DIRTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xfs_trans*, %struct.xfs_rud_log_item*, i32, i32, i32, i32, i32, i32, i32, %struct.xfs_btree_cur**)* @xfs_trans_log_finish_rmap_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfs_trans_log_finish_rmap_update(%struct.xfs_trans* %0, %struct.xfs_rud_log_item* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, %struct.xfs_btree_cur** %9) #0 {
  %11 = alloca %struct.xfs_trans*, align 8
  %12 = alloca %struct.xfs_rud_log_item*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca %struct.xfs_btree_cur**, align 8
  %21 = alloca i32, align 4
  store %struct.xfs_trans* %0, %struct.xfs_trans** %11, align 8
  store %struct.xfs_rud_log_item* %1, %struct.xfs_rud_log_item** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store %struct.xfs_btree_cur** %9, %struct.xfs_btree_cur*** %20, align 8
  %22 = load %struct.xfs_trans*, %struct.xfs_trans** %11, align 8
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %14, align 4
  %25 = load i32, i32* %15, align 4
  %26 = load i32, i32* %16, align 4
  %27 = load i32, i32* %17, align 4
  %28 = load i32, i32* %18, align 4
  %29 = load i32, i32* %19, align 4
  %30 = load %struct.xfs_btree_cur**, %struct.xfs_btree_cur*** %20, align 8
  %31 = call i32 @xfs_rmap_finish_one(%struct.xfs_trans* %22, i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29, %struct.xfs_btree_cur** %30)
  store i32 %31, i32* %21, align 4
  %32 = load i32, i32* @XFS_TRANS_DIRTY, align 4
  %33 = load %struct.xfs_trans*, %struct.xfs_trans** %11, align 8
  %34 = getelementptr inbounds %struct.xfs_trans, %struct.xfs_trans* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = or i32 %35, %32
  store i32 %36, i32* %34, align 4
  %37 = load i32, i32* @XFS_LI_DIRTY, align 4
  %38 = load %struct.xfs_rud_log_item*, %struct.xfs_rud_log_item** %12, align 8
  %39 = getelementptr inbounds %struct.xfs_rud_log_item, %struct.xfs_rud_log_item* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = call i32 @set_bit(i32 %37, i32* %40)
  %42 = load i32, i32* %21, align 4
  ret i32 %42
}

declare dso_local i32 @xfs_rmap_finish_one(%struct.xfs_trans*, i32, i32, i32, i32, i32, i32, i32, %struct.xfs_btree_cur**) #1

declare dso_local i32 @set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
